@@ -1,6 +1,7 @@
 
 2017-08-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
+	* cobc.c: added cobc_early_exit and adjusted exit calls to fix missing free
 	* ppparse.y: CDF: warn if compiler flag is unknown
 
 2017-08-11  Edward Hart <edward.dan.hart@gmail.com>
